# wordle

./: Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  main.py  pyproject.toml  requirements.txt  sql_app.db  start.sh  wordle_status.py
.github/workflows/: azure-webapps-python.yml
src/: crud.py  main.py  models.py  schemas.py  wordle_status.py
src/static/: styles.css
src/templates/: board.html  index.html  keyboard.html
static/: styles.css
templates/: index.html  keyboard.html
wordle/: conf.py  game_status.py  main.py  schemas.py  wordle_status.py  words.py
wordle/auth/: auth_exceptions.py  auth_forms.py  auth_utils.py  utils.py
wordle/db/: crud.py  models.py
wordle/login/: __init__.py
wordle/routers/: board.py  common.py  dashboard.py  debug.py  game.py  leaderboard.py  user.py
wordle/static/: board.css  header.css  keyboard.css  leaderboard.css  login_register.css  navbar.css  overlay.css  styles.css
wordle/templates/: base.html  board.html  header.html  index.html  keyboard.html  login.html  navbar.html  register.html
wordle/templates/dashboard/: dashboard.html
wordle/templates/forms/: login.html  register.html
wordle/templates/leaderboard/: leaderboard.html
wordle/templates/login/: form.html  login.html  register.html
wordle/templates/scripts/: base.js
