[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "Wordle game with leaderboard"
authors = ["luigibrancati <luigi.brancati@hype.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
fastapi-login = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
